--- a/code/node-fundamentals/public/index.html
+++ b/code/node-fundamentals/public/index.html
@@ -4,5 +4,7 @@
     </head>
     <body>
         <h1>Node.js + MongoDB</h1>
+		<h3>Juan Sotomayor</h3>
+		<h3>Ricardo Ramirez</h3>
     </body>
 </html>
